[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBERT"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD"}
dependencies = [
    #! Note: pybert is managed by conda and some of its dependencies are not pip installable.
    "click==8.0.3",
    "chaco",
    "enable>=4.8.1",
    "kiwisolver",
    "numpy",
    "scikit-rf",
    "scipy",
    "traits",
    "traitsui",
    "PyIBIS-AMI>=3.3.3",
    "pyyaml==6.0",
    ]

[project.scripts]
pybert = "pybert.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
known_first_party = ["pybert", "pyibisami"]
known_third_party = ["traits", "traitsui", "chaco", "enable"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
xfail_strict=true

[tool.mypy]
exclude="solvers"
plugins="numpy.typing.mypy_plugin"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 119
fail-under = 9.0
disable= [
    "invalid-name",
    "wrong-import-order",
    "wrong-import-position",
    "broad-except"
]
