[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBERT"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD"}
dependencies = [
    "click==8.1.3",
    "chaco==5.0.0",
    "enable==5.3.1",
    "parsec==3.13",
    "empy==3.3.4",
    "numpy==1.23.1",
    "scikit-rf==0.23.1",
    "scipy==1.9.0",
    "traits==6.4.1",
    "traitsui==7.4.0",
    "PyIBIS-AMI>=3.4.0",
    "pyyaml==6.0",
    "pyside2==5.15"
    ]

[project.scripts]
pybert = "pybert.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pybert*"]

[tool.setuptools_scm]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
known_first_party = ["pybert", "pyibisami"]
known_third_party = ["traits", "traitsui", "chaco", "enable"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
xfail_strict=true

[tool.mypy]
exclude="solvers"
plugins="numpy.typing.mypy_plugin"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 119
fail-under = 9.0
disable= [
    "invalid-name",
    "wrong-import-order",
    "wrong-import-position",
    "broad-except"
]
