[metadata]
description = "Serial communication link bit error rate tester simulator, written in Python."
url = "https://github.com/capn-freako/PyBERT/wiki"
author = "David Banas"
author_email = "capn.freako@gmail.com"
keywords = "bert", "communication", "simulator"
classifiers =
    "Development Status :: 3 - Alpha"
    "Environment :: Console"
    "Intended Audience :: Developers"
    "Intended Audience :: Education"
    "Intended Audience :: Telecommunications Industry"
    "Intended Audience :: Science/Research"
    "License :: OSI Approved :: BSD License"
    "Operating System :: OS Independent"
    "Programming Language :: Python"
    "Programming Language :: Python :: 3.7"
    "Programming Language :: Python :: Implementation :: PyPy"
    "Topic :: Adaptive Technologies"
    "Topic :: Scientific/Engineering"
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
    "Topic :: Scientific/Engineering :: Visualization"
    "Topic :: System :: Emulators"
    "Topic :: System :: Networking"
    "Topic :: Utilities"
